# unir-grupo6-tfm

./: .gitignore  DEV.md  README.md  pyproject.toml
01-adquisicion-datos/: README.md  adquisicion_bursatil.py  main.py  partition.py
02-analisis-sentimientos/: README.md  analisis_ollama.py  analisis_sentimientos.py  analisis_sentimientos_local.py  analisis_sentimientos_optimizado.py  requirements.txt
02-analisis-sentimientos/notebooks/: ANALISIS_SENTIMIENTOS_GEMINI.ipynb  ANALISIS_SENTIMIENTO_GENAI.ipynb
data/03_features/: historical_features.csv
data/04_predictions/: AAPL_order_book.csv  AAPL_trading_signals.csv  latest_trading_signals.csv
data/05_backtests/: AAPL_Apple_LSTM_Model_backtest.csv  AAPL_Apple_LSTM_Model_traditional_backtest.csv  AAPL_Apple_RandomForest_Model_backtest.csv  AAPL_Apple_Trading_Model_backtest.csv  AAPL_Apple_XGBoost_Model_backtest.csv  AAPL_Apple_XGBoost_Model_traditional_backtest.csv
datos/AAPL_partition_20260509_162143/: tweets_2026-04-10.csv  tweets_2026-04-11.csv  tweets_2026-04-12.csv  tweets_2026-04-13.csv  tweets_2026-04-14.csv  tweets_2026-04-15.csv  tweets_2026-04-16.csv
datos/AAPL_partition_20260509_162143_analisis_ollama/: analisis_tweets_2026-04-10.csv  analisis_tweets_2026-04-11.csv  analisis_tweets_2026-04-12.csv  analisis_tweets_2026-04-13.csv  analisis_tweets_2026-04-14.csv  analisis_tweets_2026-04-15.csv  analisis_tweets_2026-04-16.csv
docs/: ETL.md  backtesting.md  credenciales.md  explicabilidad_modelos.md  model_runs_comparison.md  produccion_diaria.md
notebooks/: analisis_datos.ipynb  analyse_df.ipynb  trading.ipynb  trading_2026.ipynb
practicas/01-adquisicion-datos/: partition.py
practicas/07-optimizacion/: TEMA7_Actividad2.ipynb
src/: definitions.py
src/application/: __init__.py  etl.py
src/etl/: feature_engineering.py  history.py  jobs.py  social.py  social_daily.py  stock.py
src/inference/: __init__.py  backtesting.py  predict.py
src/others/: gdelt_extraction.py
src/schemas/: __init__.py  features.py  predictions.py  social.py  (+1 more)
(+673 files in other folders)
