[project]
name = "unir-grupo6-tfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "atproto>=0.0.68",
    "dagster>=1.13.9",
    "dotenv>=0.9.9",
    "mlflow>=1.27.0",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "transformers>=5.12.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.17",
]
